2004-11-03  Vincent Noel  <vnoel@cox.net>

	* logrtns.c (file_is_zipped): New.
	(OpenLogFile): Check if the file is zipped, and unzip it in a temp
	directory if it is.
	(ReadLogStats): Remove debug spew.

	* logview.c (SetDefaultUserPrefs): When trying to open the logfile
	saved in gconf, fail silently if the file is not a log. 
	(logview_set_window_title): When opening a zipped log, use the
	name of the original zipfile and not the unzipped file.
	(logview_menus_set_state): Don't allow monitoring for zipped logs.

	* info.c: Mark the info strings for translation.

2004-11-02  Vincent Noel  <vnoel@cox.net>

	* logview.c (logview_set_window_title): Use a display name if the
	log was opened through a temporary file.

	* logrtns.c (OpenLogFile): Add detection and opening of zipped archive.

	* logview.c (logview_create_window): Use g_signal_connect instead
	of gtk_signal_connect.
	(logview_create_window_open_file): Show the window when the log is loaded.

	* info.c (LogInfo): Huge simplification. No more gtktreeview, just
	display the properties in a textview.
	(LogInfo): Use g_signal_connect instead of gtk_signal_connect.

	* logview.c (logview_create_window_open_file): Don't update the
	status bar or the window title here, this is already done in log_repaint.

	* info.c (RepaintLogInfo): Don't use gtk_tree_model_get_iter_root.

	* logview.c (logview_menus_set_state): Desensitize menu items when
	monitoring.

	* monitor.c (mon_check_logs): Be sure to stop the monitoring when
	the file is closed.

	* logrtns.c (ReadNewLines, ReadLastPage): Free a temp buffer.

	* logview.h: Remove useless defines and stuff.

	* monitor.c (mon_update_display): When new lines are added to the
	logfile, select them in the monitor.

	* logrtns.c (reverse) : kill. We have g_strreverse anyway.
	(WasModified, CloseLog, ReadLogStats, ReadNewLines)
	(ReadLastPage, isLogFile, OpenLogFile): Use gnome-vfs.
	
	Aggregate the FIXME functions at the end of the file.
